[workspace.package]
description = "A Tool Box"
authors = ["Denis Tsai <denistsai@aetheras.io"]
version = "0.15.2"
edition = "2021"
repository = "https://github.com/aetheras-io/eliz-gold"

[workspace]
members = [
   "types",
   "ext/actix",
   "ext/tokio",
   "ext/serde",
   "graphql",
   "utils/build",
   "utils/cli",
   "utils/fixtures",
]

[workspace.dependencies]
log = "0.4"
env_logger = "0.8"
ansi_term = "0.12"
thiserror = "1"
anyhow = "1"
futures = "0.3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
jsonwebtoken = { version = "8.2" }

# We will generally lock on MINOR versions to allow for some patch wiggle room at the library 
# importer, in case some small bug fix happens in the patches
[package]
name = "atb"
version.workspace = true 
authors.workspace = true 
edition.workspace = true 
repository.workspace = true

[dependencies]
atb-fixtures-utils = { path = "./utils/fixtures", optional = true }

log = { workspace = true }
env_logger = { workspace = true } 
ansi_term = { workspace = true } 
thiserror = { workspace = true } 
anyhow = { workspace = true } 
futures = { workspace = true } 
once_cell = { workspace = true }

chrono = { version = "0.4.21", features = ["serde"] }
rand = "0.8.5"

# Eventsourcing
lucidstream = { git = "https://github.com/dt665m/lucidstream-rs.git", tag = "v0.10.2", optional = true }
lucidstream-ges = { git = "https://github.com/dt665m/lucidstream-rs.git", tag = "v0.10.2", optional = true }

# Nothing by default
[features]
default = []
all = [
  "eventsourcing",
]
eventsourcing = [
  "lucidstream",
  "lucidstream-ges",
]
fixtures = [
  "atb-fixtures-utils/jwt"
]
uuidv0_8 = [
  "atb-fixtures-utils/uuidv0_8"
]
uuidv1 = [
  "atb-fixtures-utils/uuidv1"
]