[workspace.package]
description = "A Tool Box"
authors = ["Denis Tsai <denistsai@aetheras.io"]
version = "0.20.3"
edition = "2021"
repository = "https://github.com/aetheras-io/atb-rs"

[workspace]
members = [
   "types",
   "ext/actix",
   "ext/tokio",
   "ext/serde",
   # "ext/sqlx",
   "utils/build",
   "utils/cli",
   "utils/fixtures",
]

[workspace.dependencies]
log = "0.4"
env_logger = "0.8"
ansi_term = "0.12"
thiserror = "1"
anyhow = "1"
futures = "0.3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
jsonwebtoken = { version = "9.3.0" }
uuid = { version = "1", features = ["serde", "v1", "v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"

# We will generally lock on MINOR versions to allow for some patch wiggle room at the library 
# importer, in case some small bug fix happens in the patches
[package]
name = "atb"
version.workspace = true 
authors.workspace = true 
edition.workspace = true 
repository.workspace = true

[dependencies]
atb-fixtures-utils = { path = "./utils/fixtures", optional = true }

log = { workspace = true }
env_logger = { workspace = true } 
ansi_term = { workspace = true } 
thiserror = { workspace = true } 
anyhow = { workspace = true } 
futures = { workspace = true } 
once_cell = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

# Eventsourcing
lucidstream = { git = "https://github.com/dt665m/lucidstream-rs.git", tag = "v0.14.0", optional = true }
lucidstream-ges = { git = "https://github.com/dt665m/lucidstream-rs.git", tag = "v0.14.0", optional = true }

# Nothing by default
[features]
default = []
all = [
  "eventsourcing",
  "fixtures",
]
eventsourcing = [
  "lucidstream",
  "lucidstream-ges",
]
fixtures = [
  "atb-fixtures-utils/jwt"
]
