[workspace.package]
description = "A Tool Box"
authors = ["Denis Tsai <denistsai@aetheras.io"]
version = "1.4.1"
edition = "2024"
repository = "https://github.com/aetheras-io/atb-rs"

[workspace]
members = [
  "types",
  "ext/tokio",
  "ext/serde",
  "ext/graphql",
  "ext/graphql/derive",
  "ext/temporal",
  "ext/temporal/derive",
  # "ext/sqlx",
  "utils/build",
  "utils/cli",
  "utils/fixtures",
  "utils/ai",
]

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
ansi_term = "0.12"
tracing-appender = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "parking_lot",
] }
tracing-log = "0.2"
thiserror = "2"
anyhow = "1"
futures = "0.3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
uuid = { version = "1", features = ["serde", "v1", "v4", "v5", "v6", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"

# We will generally lock on MINOR versions to allow for some patch wiggle room at the library 
# importer, in case some small bug fix happens in the patches
[package]
name = "atb"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
atb-fixtures-utils = { path = "./utils/fixtures", optional = true }

log = { workspace = true }
env_logger = { workspace = true }
ansi_term = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

# Eventsourcing
lucidstream = { git = "https://github.com/dt665m/lucidstream-rs.git", tag = "v1.0.5", optional = true }
lucidstream-pg = { git = "https://github.com/dt665m/lucidstream-rs.git", tag = "v1.0.5", optional = true }

# Nothing by default
[features]
default = []
all = ["eventsourcing", "fixtures"]
eventsourcing = ["lucidstream", "lucidstream-pg"]
fixtures = ["atb-fixtures-utils/jwt"]
