[package]
name = "atb-tokio-ext"
version = "0.14.2"
authors = ["Denis Tsai <denistsai@aetheras.io>"]
edition = "2021"

[dependencies]
atb = { path = "../" }

tokio = { version = "1", features = ["signal", "rt-multi-thread", "net", "time", "macros", "sync"] }
log = "0.4"
anyhow = "1"
async-trait = "0.1.53"
futures = "0.3"
