[package]
name = "atb-types"
version.workspace = true 
authors.workspace = true 
edition.workspace = true 
repository.workspace = true

[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }

jsonwebtoken = {version = "8.1", optional = true }
lazy_static = { version = "1.4", optional = true }
base64 = { version = "0.13", optional = true } 
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true } 

[features]
default = []
all = ["jwt"]
jwt = [
  "jsonwebtoken",
  "lazy_static",
  "base64",
  "serde",
  "serde_json",
]
