[package]
name = "atb-types"
version.workspace = true 
authors.workspace = true 
edition.workspace = true 
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
jsonwebtoken = { workspace = true, optional = true }

sha2 = { version = "0.10", default-features = false }
base64 = { version = "0.22", optional = true } 
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true } 

[features]
default = []
all = ["jwt"]
jwt = [
  "jsonwebtoken",
  "base64",
  "serde",
  "serde_json",
]
