[package]
name = "atb-actix-ext"
version.workspace = true 
authors.workspace = true 
edition.workspace = true 
repository.workspace = true

[dependencies]
atb-types = { path = "../../types", optional = true }

log = { workspace = true } 
thiserror = {  workspace = true } 
futures = { workspace = true }  
serde = { workspace = true, optional = true }

actix-rt = "2.6"
actix = "0.13.0"
# Compress-zstd conflicts with some libs that use it (version wise).
actix-web = { version = "4", default-features = false, features = ["macros", "compress-brotli", "compress-gzip", "cookies"] } 
actix-web-actors = "4"

time = { version = "0.3", optional = true }
base64 = { version = "0.21", optional = true } 

[features]
default = ["atb-types/jwt", "time"]
all = [
  "jwt",
  "zstd"
]
zstd = [
  "actix-web/compress-zstd"
]
jwt = [
  "atb-types/jwt",
  "base64",
  "time",
]
