[package]
name = "atb-temporal-ext"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
atb-temporal-derive = { path = "./derive" }

thiserror = { workspace = true }
anyhow = { workspace = true }

prost-wkt-types = "0.7"
temporalio-client = { git = "https://github.com/temporalio/sdk-core", rev = "b5a473d425e7d63a49f3bbcb08767b9ff46207d0" }
temporalio-common = { git = "https://github.com/temporalio/sdk-core", rev = "b5a473d425e7d63a49f3bbcb08767b9ff46207d0" }
temporalio-sdk = { git = "https://github.com/temporalio/sdk-core", rev = "b5a473d425e7d63a49f3bbcb08767b9ff46207d0" }
temporalio-sdk-core = { git = "https://github.com/temporalio/sdk-core", rev = "b5a473d425e7d63a49f3bbcb08767b9ff46207d0" }
