[package]
name = "atb-cli-utils"
version.workspace = true 
authors.workspace = true 
edition.workspace = true 
repository.workspace = true

[dependencies]
serde = { workspace = true }

clap = { version = "4", features = ["derive", "env", "cargo", "string"] }
chrono = { version = "0.4.21", features = ["serde"] }
once_cell = "1"
strum = "0.24"
strum_macros = "0.24"
