[package]
name = "atb-fixtures-utils"
version.workspace = true 
authors.workspace = true 
edition.workspace = true 
repository.workspace = true

[dependencies]
once_cell = { workspace = true } 
jsonwebtoken = { workspace = true, optional = true }

uuidv0_8 = { package =  "uuid", version = "0.8", features = ["serde", "v1", "v4", "v5"], optional = true }
uuidv1 = { package =  "uuid", version = "1", features = ["serde", "v1", "v4", "v5"], optional = true }
fake = { version = "2.5", features = ["derive"] }

[features]
default = []
jwt = ["jsonwebtoken"]
