[package]
name = "atb-fixtures-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
once_cell.workspace = true
uuid.workspace = true
jsonwebtoken = { workspace = true, optional = true }

fake = { version = "4", features = ["derive"] }

[features]
default = []
jwt = ["jsonwebtoken"]
